package fr.uga.l3miage.pc.prisonersdilemma.enums;

public enum Action {
    BETRAY,
    COOPERATE,
    NONE
}
